fix deformation mobile modal img
blocking scroll for mobile modal

--- a/css/animate.css
+++ b/css/animate.css
@@ -1118,13 +1118,11 @@
   }
 
   from {
-    opacity: 0;
     -webkit-transform: translate3d(0, 3000px, 0);
     transform: translate3d(0, 3000px, 0);
   }
 
   60% {
-    opacity: 1;
     -webkit-transform: translate3d(0, -20px, 0);
     transform: translate3d(0, -20px, 0);
   }
